--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.3.0",
+    "typescript": "^5.4.5",
     "vite": "^5.2.8"
   }
 }
